--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   crossorigin="anonymous"
 />
 <div id="app"></div>
-<ul class="list-group">
-  <li class="list-group-item">1</li>
-  <li class="list-group-item">1</li>
-</ul>
+<div class="card">
+  <div class="card-body">
+    <ul class="list-group">
+      <li class="list-group-item">1</li>
+      <li class="list-group-item">1</li>
+    </ul>
+  </div>
+</div>
