--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div class="card">
   <div class="card-body">
     <ul class="list-group">
-      <li class="list-group-item">1</li>
-      <li class="list-group-item">1</li>
+      <li class="list-group-item">Implicit Type</li>
+      <li class="list-group-item">Explicit Type in numbers</li>
     </ul>
   </div>
 </div>
